# x40.link

./: .dockerignore  .gitignore  .golangci.yml  AGENTS.md  CNAME  CODEOWNERS  CONTRIBUTING.md  Containerfile  DEPLOYMENT.md  DEVELOPMENT.md  README.md  Taskfile.yml  go.mod  go.sum  main.go
.bingo/: Variables.mk  task.mod  task.sum  variables.env
.github/workflows/: documentation.yml  main+documentation.yml  main+x40.link.yml  pr.yml  validate.yml
.plans/: add-cli-resolve-subcommand.md
api/: api.go  buf.gen.yaml  buf.yaml  trace.go
api/auth/: auth.go  oidc.go  oidc_test.go
api/dev/: auth.proto  url.go  (+2 more)
cfg/: cfg.go  cfg_test.go
cli/: main.go  main_test.go
cmd/: redirect.go  root.go  serve.go  serve_test.go  util.go  util_test.go
configuration/: configuration.go
docs/: mkdocs.yml  pyproject.toml
docs/content/: index.md
docs/content/how-to/: deploy-infrastructure-changes.md  deploy-on-your-local-machine.md  update-github-secrets.md
docs/content/reference/api/: openapi.md  versioning.md
docs/content/reference/code/: layout.md  requirements.md
docs/content/static/api/: api.json
docs/content/static/css/: neuteroi.css
docs/content/tutorial/: learn-how-code-is-released.md
etc/: urls.yaml
grpcserver/: server.go
link/: link.go
pki/: .gitkeep
server/: error.go  error_test.go  interceptor.go  interceptor_test.go  server.go  server_test.go  storage.go  storage_test.go  wire.go  wire_gen.go
storage/: doc.go  storage.go  storage_external_test.go  storage_test.go
telemetry/: doc.go  telemetry.go
tools/: tools.go
uid/: uid.go  uid_test.go
(+52 files in other folders)
