[tool.poetry]
name = "s3k-link+docs"
version = "1.0.0"
description = "The documentation for the \"s3k.link\" project"
authors = ["Andrew Howden <hello@andrewhowden.com>"]
readme = "README.md"
packages = [{include = "s3k"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
