[tool.poetry]
name = "x40.dev"
version = "1.0.0"
description = "The documentation for the @link project"
authors = ["Andrew Howden <hello@andrewhowden.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
